--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Ez a honlapom
+<h1>Simon marcel honlapja</h1>
+<a href="bemut.html">Bemutatkozás</a>
+<hr>
+<style>
+    h1 {
+        text-align: center;
+        box-shadow: 1px 1px 3px black;
+        background-color: aqua;
+    }
+</style>
+
